# rules_unused_deps

./: .bazelignore  .bazelproject  .bazelrc  .managed.bazelproject  BUILD.bazel  MODULE.bazel  NOTES.md  README.md  WORKSPACE  aspects.bzl  defs.bzl  providers.bzl  repositories.bzl  rules.bzl  rules_jvm_external++maven+maven_install.json  rules_unused_deps_maven_install.json  test.sh  toolchains.bzl  transitions.bzl
.github/workflows/: ci.yml
acceptance/: .gitignore  BUILD.bazel  MODULE.bazel  rules_jvm_external++maven+maven_install.json
e2e/smoke/: .bazeliskrc  .bazelrc  BUILD.bazel  MODULE.bazel
e2e/smoke-workspace/: .bazeliskrc  BUILD.bazel  WORKSPACE
e2e/smoke-workspace/src/main/java/example/: E2ESmoke.java
e2e/smoke-workspace/src/support/java/example/: E2ESmokeSupport.java
e2e/smoke-workspace/src/test/java/example/: E2ESmokeTest.java
example/: .bazelproject  .bazelrc  BUILD.bazel  MODULE.bazel  rules_jvm_external++maven+maven_install.json
example/src/main/java/com/example/: Hello.java
example/src/test/java/com/example/: HelloTest.java
fixtures/: BUILD.bazel
rules_unused_deps/: .bazelproject  BUILD.bazel  MODULE.bazel  aspects.bzl  defs.bzl  rules.bzl  rules_jvm_external++maven+maven_install.json
rules_unused_deps/src/test/resources/: hello1.txt  hello2.txt  libhello1.jdeps  libhello1.jdeps.textproto  libhello2.jdeps  libhello2.jdeps.textproto
