load("@rules_jvm_external//:defs.bzl", "artifact")

java_binary(
    name = "hello",
    srcs = glob(["src/main/java/**"]),
    main_class = "com.example.Hello",
    deps = [
        artifact("org.slf4j:slf4j-api"),
    ],
    runtime_deps = [
        # this is in the right place, it is unused at compile time and is in runtime_deps
        artifact("org.slf4j:slf4j-simple"),
    ],
)

java_binary(
    name = "hello2",
    srcs = glob(["src/main/java/**"]),
    main_class = "com.example.Hello",
    deps = [
        artifact("org.slf4j:slf4j-api"),
        # this is in the wrong place, it is unused at compile time and should be in runtime_deps
        artifact("org.slf4j:slf4j-simple"),
    ],
)

