load("@rules_jvm_external//:defs.bzl", "artifact")

java_binary(
    name = "unused-deps",
    main_class = "kiwi.breen.unused.deps.UnusedDeps",
    srcs = glob(["src/main/java/**"]),
    deps = [
        "@bazel_tools//src/main/protobuf:deps_java_proto"
    ],
)

srcs = glob(["src/test/java/**"])
#resources = glob(["src/test/resources/**"])
resources = [
    "//fixtures:fixture1_unused_deps",
    "//fixtures:fixture2_unused_deps",
    "//fixtures:fixture1_uber_unused_deps",
    "//fixtures:fixture2_uber_unused_deps",
    "//fixtures:fixture3_uber_unused_deps",
    "//fixtures:fixture1_test_unused_deps",
]
deps = [
    ":unused-deps",
    "@bazel_tools//src/main/protobuf:deps_java_proto",
    "@@protobuf+//java/core",  # this is just what bazel told me to add
    artifact("junit:junit"),
    artifact("org.hamcrest:hamcrest"),
]

java_test(
    name = "unused-deps-used-test",
    test_class = "kiwi.breen.unused.deps.ProtoFixturesSanityTest",
    srcs = srcs,
    resources = resources,
    deps = deps,
)

java_test(
    name = "unused-deps-direct-test",
    test_class = "kiwi.breen.unused.deps.FixturesSanityTest",
    srcs = srcs,
    resources = resources,
    deps = deps,
)

java_test(
    name = "unused-deps-detect-test",
    test_class = "kiwi.breen.unused.deps.DetectUnusedDepsTest",
    srcs = srcs,
    resources = resources,
    deps = deps,
)