load("@com_google_protobuf//bazel:java_proto_library.bzl", "java_proto_library")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")
load(":rules.bzl", "unused_deps_test")
load(":toolchains.bzl", "unused_deps_toolchain")

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "toolchain",
    toolchain_type = ":toolchain_type",
    toolchain = ":java_toolchain",
)

unused_deps_toolchain(
    name = "java_toolchain",
    exec = ":unused-deps",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "deps_proto",
    srcs = ["src/main/protobuf/deps.proto"],
)

java_proto_library(
    name = "deps_java_proto",
    deps = [":deps_proto"],
)

java_binary(
    name = "unused-deps",
    main_class = "kiwi.breen.unused.deps.UnusedDeps",
    srcs = glob(["src/main/java/**"]),
    deps = [
        ":deps_java_proto",
        "@rules_unused_deps_maven//:org_jcommander_jcommander",
    ],
)

unused_deps_test(
    name = "unused-deps-unused-deps",
    subject = ":unused-deps",
)

srcs = glob(["src/test/java/**"])
resources = [
    "//fixtures:fixture1_unused_deps",
    "//fixtures:fixture2_unused_deps",
    "//fixtures:fixture1_uber_unused_deps",
    "//fixtures:fixture2_uber_unused_deps",
    "//fixtures:fixture3_uber_unused_deps",
    "//fixtures:fixture1_test_unused_deps",
]
deps = [
    ":unused-deps",
    ":deps_java_proto",
    "@rules_unused_deps_maven//:junit_junit",
    "@rules_unused_deps_maven//:org_hamcrest_hamcrest",
]

java_test(
    name = "unused-deps-used-test",
    test_class = "kiwi.breen.unused.deps.ProtoFixturesSanityTest",
    srcs = srcs,
    resources = resources,
    deps = deps,
)

unused_deps_test(
    name = "unused-deps-used-test-unused-deps",
    subject = ":unused-deps-used-test",
)

java_test(
    name = "unused-deps-direct-test",
    test_class = "kiwi.breen.unused.deps.FixturesSanityTest",
    srcs = srcs,
    resources = resources,
    deps = deps,
)

unused_deps_test(
    name = "unused-deps-direct-test-unused-deps",
    subject = ":unused-deps-direct-test",
)

java_test(
    name = "unused-deps-detect-test",
    test_class = "kiwi.breen.unused.deps.DetectUnusedDepsTest",
    srcs = srcs,
    resources = resources,
    deps = deps,
)

unused_deps_test(
    name = "unused-deps-detect-test-unused-deps",
    subject = ":unused-deps-detect-test",
)