load("@rules_jvm_external//:defs.bzl", "artifact")
load("@rules_unused_deps//:rules.bzl", "unused_deps", "unused_deps_test")

filegroup(
    name = "srcs",
    srcs = glob(["src/main/java/**"]),
)

java_library(
    name = "fixture1",
    srcs = [":srcs"],
    deps = [
        artifact("org.slf4j:slf4j-api"),
    ],
    runtime_deps = [
        # this is in the right place, it is unused at compile time and is in runtime_deps
        artifact("org.slf4j:slf4j-simple"),
    ],
)

unused_deps(
    name = "fixture1_unused_deps",
    subject = ":fixture1",
    visibility = ["//:__pkg__"],
)

unused_deps_test(
    name = "fixture1_unused_deps_test",
    subject = ":fixture1",
)

java_binary(
    name = "fixture1_uber",
    main_class = "kiwi.breen.unused.deps.Fixture",
    runtime_deps = [
        ":fixture1",
    ],
)

unused_deps(
    name = "fixture1_uber_unused_deps",
    subject = ":fixture1_uber",
    visibility = ["//:__pkg__"],
)

unused_deps_test(
    name = "fixture1_uber_unused_deps_test",
    subject = ":fixture1_uber",
)

java_test(
    name = "fixture1_test",
    srcs = glob(["src/test/java/**"]),
    test_class = "kiwi.breen.unused.deps.FixtureTest",
    deps = [
        artifact("junit:junit"),
        ":fixture1",
    ],
)

unused_deps(
    name = "fixture1_test_unused_deps",
    subject = ":fixture1_test",
    visibility = ["//:__pkg__"],
    testonly = True,
)

unused_deps_test(
    name = "fixture1_test_unused_deps_test",
    subject = ":fixture1_test",
)

java_library(
    name = "fixture2",
    srcs = [":srcs"],
    deps = [
        artifact("org.slf4j:slf4j-api"),
        # this is in the wrong place, it is unused at compile time and should be in runtime_deps
        artifact("org.slf4j:slf4j-simple"),
    ],
)

unused_deps(
    name = "fixture2_unused_deps",
    subject = ":fixture2",
    visibility = ["//:__pkg__"],
)

unused_deps_test(
    name = "fixture2_unused_deps_test",
    subject = ":fixture2",
    ignore = [
        artifact("org.slf4j:slf4j-simple"),
    ],
)

java_binary(
    name = "fixture2_uber",
    main_class = "com.example.Hello",
    runtime_deps = [
        ":fixture2",
    ],
)

unused_deps(
    name = "fixture2_uber_unused_deps",
    subject = ":fixture2_uber",
    visibility = ["//:__pkg__"],
)

unused_deps_test(
    name = "fixture2_uber_unused_deps_test",
    subject = ":fixture2_uber",
)

java_binary(
    name = "fixture3_uber",
    main_class = "kiwi.breen.unused.deps.Fixture",
    srcs = [":srcs"],
    deps = [
        artifact("org.slf4j:slf4j-api"),
        # this is in the wrong place, it is unused at compile time and should be in runtime_deps
        artifact("org.slf4j:slf4j-simple"),
    ],
)

unused_deps(
    name = "fixture3_uber_unused_deps",
    subject = ":fixture3_uber",
    visibility = ["//:__pkg__"],
)

unused_deps_test(
    name = "fixture3_uber_unused_deps_test",
    subject = ":fixture3_uber",
    ignore = [
        artifact("org.slf4j:slf4j-simple"),
    ],
)

java_library(
    name = "fixture4",
    srcs = [":srcs"],
    deps = [
        artifact("org.slf4j:slf4j-api"),
        ":support_fixture",
    ],
)

unused_deps_test(
    name = "fixture4_unused_deps_test",
    subject = ":fixture4",
    ignore = [
        ":support_fixture",
    ],
)

java_library(
    name = "support_fixture",
    srcs = glob(["src/support/java/**"]),
    neverlink = True,
)

unused_deps_test(
    name = "support_fixture_unused_deps_test",
    subject = ":support_fixture",
)

java_library(
    name = "fixture5",
    srcs = [":srcs"],
    deps = [
        artifact("org.slf4j:slf4j-api"),
        ":support_fixture5a",
        ":support_fixture5b",
    ],
)

unused_deps_test(
    name = "fixture5_unused_deps_test",
    subject = ":fixture5",
    ignore = [
        ":support_fixture5a",
        ":support_fixture5b",
    ],
)

java_library(
    name = "support_fixture5a",
    srcs = glob(["src/support/java/**"]),
)

java_library(
    name = "support_fixture5b",
    srcs = glob(["src/support/java/**"]),
)
