load("@rules_jvm_external//:defs.bzl", "artifact")
load("@rules_unused_deps//:defs.bzl", "unused_deps")

filegroup(
    name = "srcs",
    srcs = glob(["src/main/java/**"]),
)

java_library(
    name = "hello1",
    srcs = [":srcs"],
    deps = [
        artifact("org.slf4j:slf4j-api"),
    ],
    runtime_deps = [
        # this is in the right place, it is unused at compile time and is in runtime_deps
        artifact("org.slf4j:slf4j-simple"),
    ],
)

unused_deps(
    name = "hello1_unused_deps",
    subject = ":hello1",
)

java_library(
    name = "hello2",
    srcs = [":srcs"],
    deps = [
        artifact("org.slf4j:slf4j-api"),
        # this is in the wrong place, it is unused at compile time and should be in runtime_deps
        artifact("org.slf4j:slf4j-simple"),
    ],
)

unused_deps(
    name = "hello2_unused_deps",
    subject = ":hello2",
)

java_binary(
    name = "hello1_uber",
    main_class = "com.example.Hello",
    runtime_deps = [
        ":hello1",
    ],
)

unused_deps(
    name = "hello1_uber_unused_deps",
    subject = ":hello1_uber",
)

java_binary(
    name = "hello2_uber",
    main_class = "com.example.Hello",
    runtime_deps = [
        ":hello2",
    ],
)

unused_deps(
    name = "hello2_uber_unused_deps",
    subject = ":hello2_uber",
)

java_binary(
    name = "hello3_uber",
    main_class = "com.example.Hello",
    srcs = [":srcs"],
    deps = [
        artifact("org.slf4j:slf4j-api"),
        # this is in the wrong place, it is unused at compile time and should be in runtime_deps
        artifact("org.slf4j:slf4j-simple"),
    ],
)

unused_deps(
    name = "hello3_uber_unused_deps",
    subject = ":hello3_uber",
)

java_test(
    name = "hello1_test",
    srcs = glob(["src/test/java/**"]),
    test_class = "com.example.HelloTest",
    deps = [
        artifact("junit:junit"),
        ":hello1",
    ],
)

unused_deps(
    name = "hello1_test_unused_deps",
    subject = ":hello1_test",
    testonly = True,
)

