bazel_dep(name = "rules_java", version = "8.12.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "org.slf4j:slf4j-api:2.0.17",
        "org.slf4j:slf4j-simple:2.0.17",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    lock_file = ":rules_jvm_external++maven+maven_install.json",
)

use_repo(maven, "maven")

bazel_dep(name = "rules_unused_deps", version = "0.0.0")
local_path_override(
    module_name = "rules_unused_deps",
    path = "..",
)