load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")
load("//:rules.bzl", "unused_deps")

filegroup(
    name = "srcs",
    srcs = glob(["src/main/java/**"]),
)

java_library(
    name = "fixture1",
    srcs = [":srcs"],
    deps = [
        "@rules_unused_deps_maven//:org_slf4j_slf4j_api",
    ],
    runtime_deps = [
        # this is in the right place, it is unused at compile time and is in runtime_deps
        "@rules_unused_deps_maven//:org_slf4j_slf4j_simple",
    ],
)

unused_deps(
    name = "fixture1_unused_deps",
    subject = ":fixture1",
    visibility = ["//:__pkg__"],
)

java_binary(
    name = "fixture1_uber",
    main_class = "kiwi.breen.unused.deps.Fixture",
    runtime_deps = [
        ":fixture1",
    ],
)

unused_deps(
    name = "fixture1_uber_unused_deps",
    subject = ":fixture1_uber",
    visibility = ["//:__pkg__"],
)

java_test(
    name = "fixture1_test",
    srcs = glob(["src/test/java/**"]),
    test_class = "kiwi.breen.unused.deps.FixtureTest",
    deps = [
        "@rules_unused_deps_maven//:junit_junit",
        ":fixture1",
    ],
)

unused_deps(
    name = "fixture1_test_unused_deps",
    subject = ":fixture1_test",
    visibility = ["//:__pkg__"],
    testonly = True,
)

java_library(
    name = "fixture2",
    srcs = [":srcs"],
    deps = [
        "@rules_unused_deps_maven//:org_slf4j_slf4j_api",
        # this is in the wrong place, it is unused at compile time and should be in runtime_deps
        "@rules_unused_deps_maven//:org_slf4j_slf4j_simple",
    ],
)

unused_deps(
    name = "fixture2_unused_deps",
    subject = ":fixture2",
    visibility = ["//:__pkg__"],
)

java_binary(
    name = "fixture2_uber",
    main_class = "com.example.Hello",
    runtime_deps = [
        ":fixture2",
    ],
)

unused_deps(
    name = "fixture2_uber_unused_deps",
    subject = ":fixture2_uber",
    visibility = ["//:__pkg__"],
)

java_binary(
    name = "fixture3_uber",
    main_class = "kiwi.breen.unused.deps.Fixture",
    srcs = [":srcs"],
    deps = [
        "@rules_unused_deps_maven//:org_slf4j_slf4j_api",
        # this is in the wrong place, it is unused at compile time and should be in runtime_deps
        "@rules_unused_deps_maven//:org_slf4j_slf4j_simple",
    ],
)

unused_deps(
    name = "fixture3_uber_unused_deps",
    subject = ":fixture3_uber",
    visibility = ["//:__pkg__"],
)
