module(
    name = "rules_unused_deps",
    version = "0.1.0",
    compatibility_level = 1,
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "protobuf",
    urls = ["https://github.com/protocolbuffers/protobuf/releases/download/v31.1/protoc-31.1-linux-x86_64.zip"],
    sha256 = "96553041f1a91ea0efee963cb16f462f5985b4d65365f3907414c360044d8065",
    build_file_content = '''exports_files(["bin/protoc"])'''
)
