module(
    name = "rules_unused_deps",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_jvm_external", version = "6.7")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "junit:junit:4.13.2",
        "org.hamcrest:hamcrest:3.0",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    fetch_sources = True,
    lock_file = ":rules_jvm_external++maven+maven_install.json",
)

use_repo(maven, "maven")
